package chainofresponsibility;

public class Package {
    private String destination;

    public Package(String destination) {
        this.destination = destination;
    }

    public String getDestination() {
        return destination;
    }
}
